src/test/ui/feature-gates/feature-gate-external_doc.rs
#[doc(include="asdf.md")] //~ ERROR: #[doc(include = "...")] is experimental
fn main() {}
